...
    val spacing = LocalSpacing.current

    IconButton(
        onClick = onClick,
        modifier = modifier
            .size(spacing.extraLarge2)
            .testTag("ProfileButton")
    ) {
        ProfileIcon()
    }
}

@Composable
...
